Demoproject/force-app/main/default/objects/Contact/fields/Cntct_Address__c.field-meta.xml
<CustomField>
    <fullName>Cntct_Address__c</fullName>
    <label>Cntct_Address</label>
    <length>125</length>
    <type>Text</type>
</CustomField>