Demoproject/force-app/main/default/objects/Contact/fields/Cntct_number__c.field-meta.xml
<CustomField>
    <fullName>Cntct_number__c</fullName>
    <label>Cntct_number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>