Demoproject/force-app/main/default/objects/Contact/fields/Employee_Cont__c.field-meta.xml
<CustomField>
    <fullName>Employee_Cont__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Cont</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>