Demoproject/force-app/main/default/objects/Contact/fields/List_Formula__c.field-meta.xml
<CustomField>
    <fullName>List_Formula__c</fullName>
    <formula>IF( $Profile.Id ==&#39;00e5i000001r5BoAAI&#39;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List_Formula</label>
    <type>Checkbox</type>
</CustomField>