Demoproject/force-app/main/default/objects/Contact/fields/Phone_Numberr__c.field-meta.xml
<CustomField>
    <fullName>Phone_Numberr__c</fullName>
    <label>Phone Numberr</label>
    <type>Phone</type>
</CustomField>