Demoproject/force-app/main/default/objects/Contact/fields/Rents__c.field-meta.xml
<CustomField>
    <fullName>Rents__c</fullName>
    <label>Rents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>