Demoproject/force-app/main/default/objects/Contact/fields/Todays_date__c.field-meta.xml
<CustomField>
    <fullName>Todays_date__c</fullName>
    <label>Todays date</label>
    <type>Date</type>
</CustomField>