Demoproject/force-app/main/default/objects/Contact/listViews/Testing_Purpose.listView-meta.xml
<ListView>
    <fullName>Testing_Purpose</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>List_Formula__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Testing_Purpose</label>
</ListView>